Fix a bottom of the page layout bug.

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -6,4 +6,5 @@ body > .page
   margin-bottom: -$navbar-height
   .content
     @extend .container
+    overflow: auto
     padding-top: 1rem
